<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.job.dollar.internetrestrict.MainActivity">
    <item
        android:id="@+id/menu_clear"
        android:icon="@drawable/delete"
        android:title="@string/menu_clear"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_mark"
        android:icon="@drawable/checked"
        android:title="@string/menu_mark"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh" />
    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help" />
    <item
        android:id="@+id/menu_blacklist"
        android:title="@string/menu_blacklist" />
</menu>
